# attentive-layer-fusion

./: .devcontainer.json  .gitignore  Dockerfile  README.md  README_old.md  pyproject.toml
.github/workflows/: docker-publish.yaml
data/aggregated/: total_attn_weights_all_models.pkl  total_attn_weights_mae.pkl
data/per_model_all_performances/: perf_table_OpenCLIP_ViT-B-16_openai_v2.csv  perf_table_OpenCLIP_ViT-B-32_openai_v2.csv  perf_table_OpenCLIP_ViT-L-14_openai_v2.csv  perf_table_dinov2-vit-base-p14_v2.csv  perf_table_dinov2-vit-large-p14_v2.csv  perf_table_dinov2-vit-small-p14_v2.csv  perf_table_vit_base_patch16_224_v2.csv  perf_table_vit_large_patch16_224_v2.csv  perf_table_vit_small_patch16_224_v2.csv
notebooks/: aggregate_results.ipynb  constants.py  helper.py
notebooks/appendix_section/: appendix_A10_cls_vs_ap_vs_cls_n_ap.ipynb  appendix_A11_risk_of_overfitting.ipynb  appendix_A12_nr_heads_ablation.ipynb  appendix_A13_results_finetuning.ipynb  appendix_A15_seed_variation.ipynb  appendix_A4_model_family_full_performance_figures.ipynb  appendix_A6_attention_weights_for_learned_probe_MAE.ipynb  appendix_A7_A8_single_interediate_layer_n_cka.ipynb  appendix_nr_heads_aat_rebuttal.ipynb  create_tables_full_model_performances.ipynb
notebooks/main_section/: plot_figure_2_do_intermediate_representations_help.ipynb  plot_figure_3_does_model_size_influence_attn_porbe_all_layers.ipynb  plot_figure_4_attention_weights_for_learned_probe.ipynb  plot_figure_5_orthogonality_information_aggregation.ipynb  table_1_section_task_specific_gains.ipynb
notebooks/testing/: check_feature_existance.ipynb  get_dataset_sizes.ipynb
scripts/: combined_models_evaluation_attn_probe_CLS_VS_AP.py  combined_models_evaluation_attn_probe_large_experiments.py  combined_models_evaluation_attn_probe_large_experiments_all_tokens_intermediate_layers.py  combined_models_evaluation_attn_probe_large_experiments_all_tokens_last_layer_different_head_sizes.py  combined_models_evaluation_linear_probe_large_experiments.py  distance_matrix_computation_all_layers.py  end_2_end_eval_attentive_probe_frozen_backbone.py  end_2_end_eval_linear_probe_finetuning.py  feature_extraction.py  get_model_sizes.py  helper.py  project_location.py  single_model_evaluation.py  single_model_evaluation_all_intermediate_layers.py  slurm.py
scripts/configs/: cka_metrics.json  (+3 more)
src/: argparser.py  cli.py  cluster_models.py  sample_models.py
(+61 files in other folders)
