[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attentive-layer-fusion"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "numpy<2.0",
  "torch>=1.8.1",
  "torchvision>=0.8.9",
  "tqdm>=2",
  "scikit-learn>=1.0,<2",
  "open_clip_torch>=2.24.0",
  "pycocoevalcap",
  "webdataset>=0.2.31",
  "transformers",
  "thingsvision==2.7.2",
  "dreamsim==0.1.3",
  "slurmpy",
  "timm>=0.9.16",
  "notebook",
  "seaborn",
  "ruff",
  "wandb",
  "loguru",
  "clip",
  "dataframe-image>=0.2.7",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.0",
    "pytest",
]

[tool.setuptools.packages.find]
include = ["attentive_layer_fusion"]
namespaces = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "platform_system != 'Darwin'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "platform_system != 'Darwin'" },
]
clip = { git = "https://github.com/openai/CLIP.git" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
explicit_package_bases = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "cloudpathlib.*"
ignore_errors = true
follow_imports = "skip"

[tool.ruff]
line-length = 119
indent-width = 4
include = ["src/", "scripts/"]
exclude = ["src/data/datasets"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",
    "ANN003",
    "ANN401",
    "D413",
    "COM812",
    "D100",
    "D104",
    "D107",
    "D205",
    "PD901",
    "D400",
    "D401",
    "D415",
    "FA",
    "SLF",
    "INP",
    "TRY003",
    "TRY201",
    "EM",
    "FBT",
    "RET",
    "C406",
    "E741",
    "PLR2004",
    "RUF009",
    "RUF012",
    "BLE001",
    "S603",
    "S607",
    "S506",
    "FIX002",
    "NPY002",
    "G004",
    "S311",
    "PIE790",
    "TRY400",
    "S108",
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "D203",
    "D213",
    "N806",
    "N803",
    "E712",
    "PLR0913",
    "TC001",
    "I001"
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101",
    "ARG",
    "FBT",
]
